# svm-zk-rollup

./: .gitignore  Cargo.toml  README.md
client/: package.json
client/src/: index.ts
executor/: Cargo.toml  state.json
executor/src/: main.rs
executor/src/executor/: executor.rs
executor/src/models/: mod.rs  state.rs  transaction.rs
executor/src/zk-prover/: zk_prover.rs
executor/src/zk_prover/: mod.rs  zk_prover.rs
program/: Cargo.toml
program/src/: lib.rs  processor.rs  proof.rs  state.rs
rollup-executor/: Cargo.toml
rollup-executor/src/: main.rs  prover.rs  state.rs
