[workspace]
members = [
    "rollup-executor",
    "program"
]
resolver = "2"

# [package]
# name = "native-vault"
# version = "0.1.0"
# edition = "2021"

# [lib]
# # Should be cdylib to build correctly with cargo build sbf
# crate-type = ["cdylib"]

# [features]
# default = ["native"]
# native = ["solana-program"] # not bad, but can be better
# optimized = ["pinocchio", "five8_const", "solana-nostd-sha256"] # better
# based = [] # insane

# [dependencies]
# # Typically native programs need the solana program (cargo add solana-program)
# solana-program = { version = "2.1.4", optional = true }
# solana-nostd-sha256 = { version = "0.1.3", optional = true }
# pinocchio = { version = "0.6,0", optional = true}
# five8_const = { version = "0.1.3", optional = true }

# [dev-dependencies]
# mollusk-svm = "0.0.12"