[package]
name = "executor"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
lazy_static = "1.4"
bellman = "0.9"
pairing = "0.23.0"
rand = "0.8"
bls12_381 = "0.8"